Updates from Overleaf

--- a/tex/probabilistic_framework.tex
+++ b/tex/probabilistic_framework.tex
@@ -23,7 +23,7 @@ These three building blocks are described in the following before they are put i
     \figlbl{system_overview}
 \end{figure}
 
-\figref{system_overview} provides an overview of the building blocks of the proposed framework. After the sensory stage extracted features and some initial net fragments have been built in \emph{S1}, an inhibition phase lasting multiple additional timesteps turns off cells that do not receive sufficient lateral support. Furthermore, the project fibres between \emph{S1} and \emph{S2} run in both directions, not only mapping net fragments to reference frames but also providing feedback to \emph{S1} in the form of additional support for well-known objects.
+\figref{system_overview} provides an overview of the building blocks of the proposed framework. After the sensory stage extracted features and some initial net fragments have been built in \emph{S1}, an inhibition phase \sidecite{coombs_specific_1955} lasting multiple additional timesteps turns off cells that do not receive sufficient lateral support. Furthermore, the project fibres between \emph{S1} and \emph{S2} run in both directions, not only mapping net fragments to reference frames but also providing feedback to \emph{S1} in the form of additional support for well-known objects.
 
 \paragraph{Sensors System \emph{S0}.} A typical input to the sensory stage is an image having one (grey-scale) or three (RGB) colour channels. Therefore, such an image can be interpreted as having one or three features at every spatial location.
 The sensory system extracts multiple features by considering a spatial neighbourhood, thereby increasing the number of features.
