Updates from Overleaf

--- a/tex/experiments.tex
+++ b/tex/experiments.tex
@@ -21,7 +21,7 @@ Straight lines are particularly suitable for interpreting and evaluating the net
 
 
 The dataset is generated online, meaning that images are created when required and not stored on the disk. This provides high flexibility and allows dynamically generating different images, which is helpful, especially during evaluation.
-For the conducted experiments, black and white images with a dimensionality of $1 \times 32 \times 32$ are used, whereby $1$ is the number of colour channels and $32 \times 32$ is the image's width and height, respectively.
+For the conducted experiments, black and white images with a dimensionality of $[1 \times 32 \times 32]$ are used, whereby $1$ is the number of colour channels and $[32 \times 32]$ is the image's width and height, respectively.
 The dataset is binary and depicts different types of lines.
 All background pixels are set to $0$, while the pixels representing a line are set to $1$.
 No normalisation is used as the data distribution of the binary dataset is already well-aligned, and normalisation is unnecessary.
@@ -45,7 +45,7 @@ The result of such a trajectory strategy is shown in \figref{straight_line_traje
 
 \section{Sensory System \emph{S0}}\seclbl{exp_s0}
 The dataset used in this thesis is rather straightforward and does not require learning dedicated filters.
-Furthermore, it is expected that learning proper filters is a simple task that poses not many challenges as deep learning networks have proven themselves as excellent pattern recognition systems able to learn filters that are well tuned to the data domain \sidecite{bertolini_machine_2021, bhatt_cnn_2021, zou_object_2023}.
+Furthermore, it is expected that learning proper filters is a simple task that poses not many challenges as deep learning networks have proven themselves as excellent pattern recognition systems able to learn filters that are well tuned to the data domain \sidecite{bhatt_cnn_2021, bertolini_machine_2021, zou_object_2023}.
 
 For the conducted experiments, hand-crafted filters seem sufficient and are preferred as they do not require additional training and can be designed to be highly interpretable. Interpretability facilitates a better understanding of the extracted features and allows a clearer comprehension of the net fragments built in the subsequent stage based on these features. 
 
@@ -59,10 +59,10 @@ For the conducted experiments, hand-crafted filters seem sufficient and are pref
 The hand-crafted filters are illustrated in \figref{filters_feature_extractor}.
 Four filters are used, each specialising in a different type of line.
 These filters function similarly to a convolutional layer with frozen (non-trainable) weights and no bias term. 
-During processing, the filters are shifted with a stride of $1$ across the input image of size $(1 \times 32 \times 32)$ so that it is applied at all input positions. 
+During processing, the filters are shifted with a stride of $1$ across the input image of size $[1 \times 32 \times 32]$ so that it is applied at all input positions. 
 The borders are padded with $0$ values to keep the input and output sizes identical.
-After applying the four filters, the output has a shape of $(4 \times 32 \times 32)$. 
-However, the activations can be in the range of $-1, ..., +1$.
+After applying the four filters, the output has a shape of $[4 \times 32 \times 32]$. 
+However, the activations can be in the range of $(-1, ..., +1)$.
 In order to obtain binary activations, these activations are used as the firing probability of a Bernoulli neuron, whereby values $\leq 0$ are mapped to an activation probability of $0\%$.
 This means that the initial activation is used as a probability value, and its binary activation is sampled from a Bernoulli distribution.
 
@@ -81,14 +81,14 @@ The other filters primarily activate around the endpoints of the lines.
 
 
 \section{Feature Extracting Stage \emph{S1}}\seclbl{exp_s1}
-The feature-extracting stage further processes the sensory signal of shape $(4 \times 32 \times 32)$ to build net fragments. In the conducted experiments, no alternative cells are used, and therefore, the output of \emph{S1} has the same shape as the input signal, i.e. $(4 \times 32 \times 32)$.
+The feature-extracting stage further processes the sensory signal of shape $[4 \times 32 \times 32]$ to build net fragments. In the conducted experiments, no alternative cells are used, and therefore, the output of \emph{S1} has the same shape as the input signal, i.e. $[4 \times 32 \times 32]$.
 However, as described in \secref{framework_s1}, the input of \emph{S1} consists not only of the signal from the sensory system but also of the previous net fragments that can be overridden by the feedback from the object prototypes.
-These inputs are stacked along the first dimension, resulting in an input matrix of shape $(8 \times 32 \times 32)$ and an output of shape $(4 \times 32 \times 32)$.
-Thereby, the first four channels (i.e. the input with index $(1, ..., 4 \times H \times W)$) are the output of the sensory system, and the last four channels (i.e. input with index $(5, ..., 8 \times H \times W)$) are the previous net fragments.
+These inputs are stacked along the first dimension, resulting in an input matrix of shape $[8 \times 32 \times 32]$ and an output of shape $[4 \times 32 \times 32]$.
+Thereby, the first four channels (i.e. the input with index $[(1, ..., 4) \times H \times W]$) are the output of the sensory system, and the last four channels (i.e. input with index $[(5, ..., 8) \times H \times W]$) are the previous net fragments.
 The previous net fragments are overridden by the feedback of \emph{S2} if the mean square error between the net fragments and the \emph{S2} feedback is below a threshold value of $0.05$, and thus, the feedback is considered credible.
 
-The lateral support reach of a single cell is defined as $n_l=5$. Thus, a cell can get lateral supported by all cells, not further away than $5$ cells in each direction. Thus the support can be obtained from $2n_l+1=11$ cells per input channel.
-The lateral support is implemented with a convolutional kernel $\boldsymbol{W}$ of size $(4 \times 8 \times 11 \times 11)$, that maps the $8$ input channels to $4$ output channels.
+The lateral support distance of a single cell is defined as $n_l=5$. Thus, a cell can get lateral support by all cells, not further away than $5$ cells in each direction. Thus the support can be obtained from $2n_l+1=11$ cells per input channel.
+The lateral support is implemented with a convolutional kernel $\boldsymbol{W}$ of size $[4 \times 8 \times 11 \times 11]$, that maps the $8$ input channels to $4$ output channels.
 The kernel is initialised as described in \secref{lateral_init} and updated with Hebbian updates as described in \secref{framework_hebb_updates}.
 However, implementing Hebbian updates for a convolutional kernel is challenging, as in an efficient implementation, the kernel is not shifted over the image, but a circulant matrix is used, which cannot provide information about which cells connected through a synapse were active simultaneously. This is solved by using two convolutional kernels as described in \secref{exp_conv_details}. However, the principle remains the same, and this two-step procedure is only used for higher computational efficiency.
 
@@ -97,7 +97,7 @@ This support strength is normalised as described in \secref{framework_norm} usin
 However, at the end of the normalisation procedure, each output channel is divided by its highest value to ensure that the support strength is in the range $(0, ..., 1)$ and the highest activation has an activation probability of $1$.
 %
 \begin{align}\eqlbl{exp_norm}
-	x_{c_{\text{out}},w,h} := \frac{x_{c_{\text{out}},w,h}}{max_{c=0}^{C_{\text{out}} x_{c,w,h}}}
+	x_{c_{\text{out}},w,h} := \frac{x_{c_{\text{out}},w,h}}{\max_{c=0} C_{\text{out}} x_{c,w,h}}
 \end{align}
 %
 The input is processed over $6$ timesteps, and the Hebbian update is calculated between the input and the median activation during these timesteps to increase training stability.
@@ -105,14 +105,14 @@ The learning rate is set to $0.1$, the mini-batch size is $256$, and the model i
 
 
 
-\subsection{Support Implementation Details}\seclbl{exp_conv_details}
+\subsection{Implementation Details}\seclbl{exp_conv_details}
 In an efficient implementation of a convolutional layer, a circulant matrix is used so that all kernel updates can be calculated in parallel. However, by applying this operation, information about the cell's lateral influence is lost.
 
 A solution to this problem is proposed by \sideciteay{miconi_hebbian_2021}. He uses a loss function whose derivative is exactly the Hebbian update. By doing so, backpropagation of error can be used to update the weights, whereby the weight update is similar to the Hebbian rule.
 This allows very efficient Hebbian training for convolutional layers.
 However, this approach is limited and does not provide the flexibility needed to implement all parts of the proposed framework.
 
-This thesis proposes a different implementation that comes with a slight memory overhead but is very efficient and does not rely on backpropagation. The proposed method is based on two convolutional layers: The first layer is a fixed, binary convolution that restructures each input patch into a single-column vector. This is followed by a $1\times1$ convolution containing the actual weights. Specifically, we can pass the input through a fixed convolution with an input size of $C_{in} \times 2n_l+1 \times 2n_l+1$ and $C_{in} 2(2n_l+1)$ output channels. The weight vector for this convolution is set to $1$ for the connections linking input $c_i,w,h$ to output $c_iwh$ (where $c_i$ $w$, and $h$ range from 1 to $C_{in}$, $2n+1$, and $2n+1$, respectively), and it is set to 0 everywhere else. This process reorganises the values of each input patch from the original convolution into non-overlapping column vectors, effectively duplicating them. Next, the actual weights of the original convolution using can be applied using a simple $1\times1$ convolution. This can be achieved by performing a tensor product with appropriate broadcasting.
+This thesis proposes a different implementation that comes with a slight memory overhead but is very efficient and does not rely on backpropagation. The proposed method is based on two convolutional layers: The first layer is a fixed, binary convolution that restructures each input patch into a single-column vector. This is followed by a $1\times1$ convolution containing the actual weights. Specifically, we can pass the input through a fixed convolution with an input size of $\left[C_{in} \times (2n_l+1) \times (2n_l+1)\right]$ and $C_{in} 2(2n_l+1)$ output channels. The weight vector for this convolution is set to $1$ for the connections linking input $c_i,w,h$ to output $c_iwh$ (where $c_i$ $w$, and $h$ range from 1 to $C_{in}$, $2n+1$, and $2n+1$, respectively), and it is set to 0 everywhere else. This process reorganises the values of each input patch from the original convolution into non-overlapping column vectors, effectively duplicating them. Next, the actual weights of the original convolution can be applied using a simple $1[\times1]$ convolution. This can be achieved by performing a tensor product with appropriate broadcasting.
 Thus, the proposed method allows calculating Hebbian updates while fully leveraging the computational capabilities of current deep learning hardware.
 
 
@@ -127,7 +127,6 @@ However, since \emph{S2} is needed to provide feedback to \emph{S1}, a mockup si
 The mockup described in the following is inspired by the brain's memory system, located in the prefrontal cortex \sidecite{tomita_top-down_1999}.
 In the context of our framework, such a memory system would be located after \emph{S2} and map the reference object to memories.
 A single memory can be considered a label, i.e., the projection fibres could initiate a mapping to a face while the memory is the person's name.
-Please note that this is not a one-to-one mapping. For example, \emph{S2} could contain a reference frame of a face, while specific instances of faces are stored in the memory system (one-to-n mapping), or multiple reference frames can depict the same object, for example, from different viewpoints (n-to-one mapping).
 
 Many neurons are active when we see a person for the first type.
 However, after a short learning period, our brain is rewired to remember a frequently occurring object with one or a few single cells \sidecite{gross_genealogy_2002}.
@@ -142,15 +141,15 @@ The mockup should map net fragments in \emph{S1} denoted as $\boldsymbol{a}$ to 
 Restricted Boltzmann machines (RBMs) \sidecite{smolensky_information_1986, hinton_training_2002} are generative stochastic networks that can learn such a probability distribution.
 They use a linear transformation to map from $\boldsymbol{a}$ to $\boldsymbol{h}$ and the inverse linear transformation to map backwards from $\boldsymbol{h}$ to $\boldsymbol{a}$.
 
-First, the 3D activation map containing the net fragments is flattened and multiplied with a weight matrix $\boldsymbol{W}_{S2}$ of size $C_{out}\cdot W\cdot H \times Z$. This results in a one-dimensional vector $h$ of length $Z$, whereby $Z$ is a hyperparameter and defines the memory's capacity.
+First, the 3D activation map containing the net fragments is flattened and multiplied with a weight matrix $\boldsymbol{W}_{S2}$ of size $\left[(C_{out}\cdot W\cdot) H \times Z\right]$. This results in a one-dimensional vector $\boldsymbol{h}$ of length $Z$, whereby $Z$ is a hyperparameter and defines the memory's capacity.
 In the conducted experiments, the capacity is set to $Z=16$.
-For both mappings $P(\boldsymbol{h}|\boldsymbol{a})$ and $P(\boldsymbol{a}|\boldsymbol{h})$, a bias term $a$ and $b$, and the sigmoid function to squeeze the activations in the range $0, ..., 1$ is used. 
+For both mappings $P(\boldsymbol{h}|\boldsymbol{a})$ and $P(\boldsymbol{a}|\boldsymbol{h})$, a bias term $\boldsymbol{b}_a$ and $\boldsymbol{b}_h$, and the sigmoid function to squeeze the activations in the range $(0, ..., 1)$ is used. 
 The weight $\boldsymbol{W}_{S2}$ can be interpreted as fully connected projection fibres, mapping the cells in \emph{S1} ($\boldsymbol{a}$) to memory cells ($\boldsymbol{h}$).
 \begin{align}\eqlbl{l2_1}
-	P(\boldsymbol{h}_j=1 | \boldsymbol{a}) = \text{sigmoid}(\boldsymbol{W}_{S2} \cdot \boldsymbol{a} + a) / \frac{1}{1 + e^{\boldsymbol{W}_{S2} \cdot \boldsymbol{a} + a}}
+	P(\boldsymbol{h}_j=1 | \boldsymbol{a}) = \text{sigmoid}(\boldsymbol{W}_{S2} \cdot \boldsymbol{a} + \boldsymbol{b}_a) = \frac{1}{1 + e^{\boldsymbol{W}_{S2} \cdot \boldsymbol{a} + \boldsymbol{b}_a}}
 \end{align}
 \begin{align}\eqlbl{l2_2}
-	P(\boldsymbol{a}_i=1 | \boldsymbol{h}) = \text{sigmoid}(\boldsymbol{W}_{S2}^\top \cdot \boldsymbol{h} + b) / \frac{1}{1 + e^{\boldsymbol{W}_{S2}^\top \cdot \boldsymbol{h} + b}}
+	P(\boldsymbol{a}_i=1 | \boldsymbol{h}) = \text{sigmoid}(\boldsymbol{W}_{S2}^\top \cdot \boldsymbol{h} + \boldsymbol{b}_h) = \frac{1}{1 + e^{\boldsymbol{W}_{S2}^\top \cdot \boldsymbol{h} + \boldsymbol{b}_h}}
 \end{align}
 Similar to \emph{S1}, we treat the activity of these neurons as probability and thus sample the output from a Bernoulli distribution.
 \begin{align}\eqlbl{l2_3}
@@ -160,15 +159,16 @@ Similar to \emph{S1}, we treat the activity of these neurons as probability and 
 	\boldsymbol{a}_{out} \thicksim \text{Bernoulli}(P(\boldsymbol{a} | \boldsymbol{h}))
 \end{align}
 
-The parameters $\boldsymbol{W}_{S2}$, $a$, and $b$ are updated by minimising the difference of the free energy function $F(\cdot)$ \sidecite{hinton_training_2002} between $\boldsymbol{a}_{in}$ and $\boldsymbol{a}_{out}$ (i.e. $F(\boldsymbol{a}_{in}) - F(\boldsymbol{a}_{out})$). For more details, interested readers are referred to the publication by \citeay{hinton_training_2002} or a well-written blog-post by \sideciteay{hui_machine_2017}.
+The parameters $\boldsymbol{W}_{S2}$, $\boldsymbol{b}_a$, and $\boldsymbol{b}_h$ are updated by minimising the difference of the free energy function $F(\cdot)$ \sidecite{hinton_training_2002} between $\boldsymbol{a}_{in}$ and $\boldsymbol{a}_{out}$ (i.e. $F(\boldsymbol{a}_{in}) - F(\boldsymbol{a}_{out})$). For more details, interested readers are referred to the publication by \citeay{hinton_training_2002} or a well-written blog post by \sideciteay{hui_machine_2017}.
 The free energy function is minimised using the Adam \sidecite{kingma_adam_2017} optimiser with a learning rate of $0.05$, and the parameters $\beta_1=0.9$, $\beta_2=0.999$, and $\epsilon=1\cdot 10^{-8}$.
 During training, the learning rate is reduced by a factor of $0.1$ if the free energy does not reduce further for more than $2$ epochs until a final learning rate of $1\cdot 10^{-6}$ is reached.
 The batch size is set to $256$, and the model is trained for $10$ epochs (similar to \emph{S1}).
 
 By minimising the free energy function, the memory decides by itself which representation should be stored.
-When observing cell activity $\boldsymbol{a}$ in \emph{S1}, $P(\boldsymbol{h}|\boldsymbol{a})$ defines the probability for the cell activity in the memory. Since we sample $\boldsymbol{h}_{out} \thicksim \text{Bernoulli}(P(\boldsymbol{h} | \boldsymbol{a}) )$, $\boldsymbol{h}_{out}$ becomes binary, whereby cells with a low probability tend to be turned off, while cells with a high probability tend to fire.
+After observing cell activity $\boldsymbol{a}$ in \emph{S1}, $\boldsymbol{a}$ is mapped to $h_out$, whereby $P(\boldsymbol{h}|\boldsymbol{a})$ defines the probability for the cell activity in the memory. Since we sample $\boldsymbol{h}_{out} \thicksim \text{Bernoulli}(P(\boldsymbol{h} | \boldsymbol{a}) )$, $\boldsymbol{h}_{out}$ becomes binary and cells with a low probability tend to be turned off, while cells with a high probability tend to fire.
 This can be interpreted as a filter against noise and slight deformations: A cell activity $\boldsymbol{a}$ is mapped to the closest known configuration of $\boldsymbol{h}$.
-To provide feedback to \emph{S1}, $P(\boldsymbol{a}|\boldsymbol{h})$ is calculated in a similar fashion. Thus, the memory is a probabilistic associative memory, providing feedback to \emph{S1} based on its current cell state.
+To provide feedback to \emph{S1}, the returned vector $\boldsymbol{a}_out$ is calculated in a similar fashion and sampled from $P(\boldsymbol{a}|\boldsymbol{h})$. Thus, the memory is a probabilistic associative memory, mapping an input to a hidden state from which an output is sampled.
+This sampled output is a prototype stored in the memory and used to provide feedback to \emph{S1}.
 
 
 
