--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -60,7 +60,7 @@ However, two building blocks are missing compared to the vision described in \se
 Second, a scene interpretation stage is missing. While the projection fibres answer the question of ``what?'' is visible within an image, an additional stage should analyse the relation between objects and allow the interpretation of visual scenes.
 
 
-\subsection{Refining and Confirming Theoretical Foundations}
+\subsection{Refining Theoretical Foundations}
 The stage \emph{S1} is well developed, and it has been demonstrated in experiments that Bernoulli neurons trained with Hebbian learning can form net fragments. Nevertheless, adding alternative cells and negative Hebbian learning seems crucial to scale to different datasets.
 
 The stage \emph{S2} has only been explored from a theoretical viewpoint within this thesis. It is important to conduct experiments to refine the proposed theoretical foundations and to demonstrate their efficiency.
