--- a/tex/math.tex
+++ b/tex/math.tex
@@ -20,18 +20,29 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	\textbf{Variable} & \textbf{Meaning}\\
 	\hline
 	$\eta$ & The learning rate of an optimisation algorithm.\\
+    $\kappa$ & The number of alternative cells.\\
     $\psi$ & Estimated pre- or post-synaptic activity of a cell, required for Hebbian learning (c.f. \eqref{hebb_2}).\\
+    $\rho$ & Upper limit for cell support before the support is decreased.\\
 	$\boldsymbol{a} = (a_1, ..., a_k)$ & The output of an intermediate layer of a multi-layer network with $k$ neurons, the output of the last layer is typically denoted as $\boldsymbol{\hat{y}}$. $a_i$ is the output of an activation function of a single neuron.\\
 	$\boldsymbol{b} = (b_1, ..., b_k)$ & The bias of a network layer with 
     $k$ neurons. $b_i$ is the bias of a single neuron.\\
-    $C$ & The capacity of a Hopfield network, i.e. the number of patterns that can be stored.\\
-    $k$ & The number of neurons within a layer.\\
+    $C$ & The capacity of a Hopfield network, i.e. the number of patterns that can be stored or the number if channels from an input matrix.\\
+    $h$ & Hidden state of the memory, storing object prototypes.\\
+    $H$ & The height of an image.\\
+    $J$ & The Jaccard similarity between two binary vectors (c.f. \eqref{jaccard}).\\
+    $k$ & The number of neurons within a layer or kernel.\\
     $L$ & The number of layers of a network.\\
-    $n$ & The length (size) of a vector, for example, an input of length $n$ is defined as $\boldsymbol{x} = (x_1, ..., x_n)$.\\
+    $n$ & The length (size) of a vector, for example, an input of length $n$ is defined as $\boldsymbol{x} = (x_1, ..., x_n)$. $n_l$ is also used for the support distance of lateral connections.\\
+    $o$ & A single neuronal cell.\\
+    $P$ & The probability of observing a variable.\\
+    $t$ & The current timestep.\\
+    $T$ & The total number of timesteps.\\
     $w_{ij}$ & The weight between neuron $i$ and neuron $j$.\\
 	$\boldsymbol{w} = (w_1, ..., w_n)$ & A weight vector of a neuron, mapping an input of length $n$ to a scalar value.\\
+    $W$ & The width of an image.\\
 	$\boldsymbol{W} = (\boldsymbol{w}_1, ..., \boldsymbol{w}_k)$ & A weight matrix of a network layer.\\
     $\boldsymbol{x} = (x_1, ..., x_n)$ & An input sample that is fed into a model or a network layer, typically a vector of length $n$.\\
+    $Z$ & Capacity of the memory.\\
  \end{tabular}
  
  \begin{tabular}{ p{3cm} p{11cm} }
@@ -49,6 +60,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	\textbf{Function} & \textbf{Meaning}\\
 	\hline
 	$f(\cdot)$ & An activation function such as $\sigma(\cdot)$, $(\cdot)^{+}$, or $\tanh(\cdot)$ (c.f. \eqref{act_functions}).\\
+    $F(\cdot)$ & The free energy function.\\
 	$g(\cdot)$ & The aggregation function that calculates the scalar value that is fed into the activation function $f(\cdot)$ (c.f. \eqref{McCulloch_Pitts_agg},  \eqref{nn}).\\
     $\mathcal{L}(\cdot)$ & A loss function to calculate the quality of the model output, typically comparing a prediction $\boldsymbol{\hat{y}}$ with a teaching signal $\boldsymbol{y}$, i.e. $\mathcal{L}(\boldsymbol{\hat{y}}, \boldsymbol{y})$\\
 \end{tabular}
