--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,20 @@
 
+@article{gabor_theory_1946,
+	title = {Theory of communication: The analysis of information},
+	volume = {93},
+	issn = {2054-0604},
+	url = {https://digital-library.theiet.org/content/journals/10.1049/ji-3-2.1946.0074},
+	doi = {10.1049/ji-3-2.1946.0074},
+	shorttitle = {Theory of communication. Part 1},
+	pages = {429--441},
+	number = {26},
+	journaltitle = {Journal of the Institution of Electrical Engineers - Part {III}: Radio and Communication Engineering},
+	author = {Gabor, D.},
+	urldate = {2023-07-11},
+	date = {1946-11},
+	langid = {english},
+}
+
 @article{stettler_lateral_2002,
 	title = {Lateral Connectivity and Contextual Interactions in Macaque Primary Visual Cortex},
 	volume = {36},
@@ -2601,22 +2617,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	langid = {english},
 }
 
-@article{gabor_theory_1946,
-	title = {Theory of communication. Part 1: The analysis of information},
-	volume = {93},
-	issn = {2054-0604},
-	url = {https://digital-library.theiet.org/content/journals/10.1049/ji-3-2.1946.0074},
-	doi = {10.1049/ji-3-2.1946.0074},
-	shorttitle = {Theory of communication. Part 1},
-	pages = {429--441},
-	number = {26},
-	journaltitle = {Journal of the Institution of Electrical Engineers - Part {III}: Radio and Communication Engineering},
-	author = {Gabor, D.},
-	urldate = {2023-07-11},
-	date = {1946-11},
-	langid = {english},
-}
-
 @misc{hinton_improving_2012,
 	title = {Improving neural networks by preventing co-adaptation of feature detectors},
 	url = {http://arxiv.org/abs/1207.0580},
@@ -4640,22 +4640,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Fukushima, Kunihiko},
 	urldate = {2023-06-27},
 	date = {1980-04},
-	langid = {english},
-}
-
-@article{fukushima_neocognitron_2007,
-	title = {Neocognitron},
-	volume = {2},
-	issn = {1941-6016},
-	url = {http://www.scholarpedia.org/article/Neocognitron},
-	doi = {10.4249/scholarpedia.1717},
-	pages = {1717},
-	number = {1},
-	journaltitle = {Scholarpedia},
-	shortjournal = {Scholarpedia},
-	author = {Fukushima, Kunihiko},
-	urldate = {2023-06-27},
-	date = {2007},
 	langid = {english},
 }
 
